Adding increment method to increment counter
